# emailapi-to-mm

./: .gitignore  Cargo.toml  flake.nix  wrangler.toml
src/: lib.rs
