[package]
name = "emailapi-to-mm"
version = "0.1.0"
edition = "2024"
authors = ["tsukumo <contact@tsukumo.f5.si>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
worker = { version = "0.8" }
worker-macros = { version = "0.8" }
