[package]
name = "emailapi-to-mm"
version = "0.1.0"
edition = "2024"
authors = ["tsukumo <contact@tsukumo.f5.si>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
ctutils = "0.4.2"
hmac = "0.13.0"
hmac-sha256 = "1.1.14"
indoc = "2.0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
worker = { version = "0.8" }
worker-macros = { version = "0.8" }
